Verwysing nå döärverwyssyde repareerd ([[Oostfrais]] nå [[Oostfreisk Nederduutsk]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Jan_Veenstra.mw
+++ b/Jan_Veenstra.mw
@@ -2,7 +2,7 @@
 
 Hi'j debuteerde mit verhalen in 't [[Drenthe|Drèentse]] blad [[Oeze Volk]] en hef [[Nedersaksisch]] wark eschreven veur [[RTV Noord|Radio Noord]], maakten 't dreiboek veur de film ''Tweitalig'' en schreef [[column|columns]] veur regionaole kraanten en de radio. Ok hef e satirische teksten, parodieën, tenielstokken en liedteksten veur zangers as [[Egbert Meyers]] en 't [[Duo Karst]] eschreven. Vanof 1982 schreef e in 't Drèentse literaire tiedschrift ''[[Roet (tiedschrift)|Roet]]'', daoras e van 1984 töt en mit 1998 van in de redactie zat.
 
-Mit [[Dick Blanke]], [[Marga Kool]] en [[Albert Haar]] maakten e een pooslaank 't theaterpregramma de [[Hunebed-Turbo-Show]]. Hi'j was iene van de verzörgers van de Taaltheaternachten in [[Emmen]] en van bi'jienkomsten van Nedersaksische schrievers uut Nederlaand en Duutslaand. Dizzend hebt eleid töt 't ontstaon van 't [[Oostfrais|Oostfriese]] literaire tiedschrift ''[[Diesel (tiedschrift)|Diesel]]'', tegenhanger van ''Roet'' en van 't Grunningse ''[[Krödde (tiedschrift)|Krödde]]''.
+Mit [[Dick Blanke]], [[Marga Kool]] en [[Albert Haar]] maakten e een pooslaank 't theaterpregramma de [[Hunebed-Turbo-Show]]. Hi'j was iene van de verzörgers van de Taaltheaternachten in [[Emmen]] en van bi'jienkomsten van Nedersaksische schrievers uut Nederlaand en Duutslaand. Dizzend hebt eleid töt 't ontstaon van 't [[Oostfreisk Nederduutsk|Oostfriese]] literaire tiedschrift ''[[Diesel (tiedschrift)|Diesel]]'', tegenhanger van ''Roet'' en van 't Grunningse ''[[Krödde (tiedschrift)|Krödde]]''.
 
 In 1997 hef Veenstra de [[SNS-literetuurpries]] ekregen.
 
