/* Dinge dee al good gåt */

--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -142,7 +142,7 @@ De grötste uutdagingen vöär de ekonomy sint ne kleine warkmacht, et feit dat 
 De regeyring wil et up den langen duur uplössen döär verskillende sektoren to stimuleren, de ekonomy to vorbreyden, regeyringsuutgaven in to dammen, volk an et underneamen to krygen un butenlandske investeringen an to trekken.
 
 === Dinge dee al good gåt ===
-In döärsneyde düt São Tomé en Príncipe et better as andere afrikaanske landen under den Sahara up de [[Untwikkelingsindeks]]. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde [[leavensverwachting]] is inmiddels 70 jår. [[Kinderstarvde]] kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
+In döärsneyde düt São Tomé en Príncipe et up de [[Untwikkelingsindeks]] better as andere afrikaanske landen under den Sahara. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde [[leavensverwachting]] is inmiddels 70 jår. [[Kinderstarvde]] kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
 
 Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden un dee butenlandske investeringen antrekkelik maket. Tüsken 2015 un 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor un untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
 
