--- a/Ins.mw
+++ b/Ins.mw
@@ -3,7 +3,7 @@
 | soorte = Durrep
 | bestansnaam vlagge =
 | bestansnaam wapen =
-| lokasie-svg =
+| region = NL-FL
 | breedtegroad = 52.6
 | lengtegroad = 5.8
 | gemeente =[[Noordoostpolder]]
@@ -42,7 +42,8 @@ Uitkijktoren met een open stalen overkapping - Ens - 20409850 - RCE.jpg|Eutkiekt
 * Evert van Benthem, skoatser
 * Wiert Omta, burregemèèster
 
-{{Commonscat|Ens}}
+{{Commonscat|Ens (Noordoostpolder)}}
 {{Dialekt|urs}}
+
 [[Kategorie:Noordoostpolder]]
 [[Kategorie:Plaotse in Flevolaand]]
