Wysigingen döär [[Special:Contributions/2A02:A442:3732:1:E8BE:503D:A83B:CBDD|2A02:A442:3732:1:E8BE:503D:A83B:CBDD]] ([[User talk:2A02:A442:3732:1:E8BE:503D:A83B:CBDD|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Bdijkstra|Bdijkstra]]

--- a/Friese_elf_steden.mw
+++ b/Friese_elf_steden.mw
@@ -1,8 +1,8 @@
 De '''Friese elf steden''' bin elf plaetsen in [[Frieslaand]] die deur de geschiedenis henne [[stadsrechten]] kregen hebben:
 
-*[[Leeuwarden (stad)|Leeuwarden]] (''Ljouwert'') - gemiente [Leeuwarden (gemiente)|Liwwadden]]
-*[[Sneek (stad)|Sneek]] (''Snits'') - gemiente [[Sneek (gemiente)|Sudwest Fryslan]]
-*[[Ijlst (stad)|Ijlst]] (''Drylts'') - gemiente [[Sudwest Fryslan(gemiente)|Sudwest Fryslan]]
+*[[Liwwadden (stad)|Liwwadden]] (''Ljouwert'') - gemiente [[Liwwadden (gemiente)|Liwwadden]]
+*[[Sneek (stad)|Sneek]] (''Snits'') - gemiente [[Sneek (gemiente)|Sneek]]
+*[[Ielst (stad)|Ielst]] (''Drylts'') - gemiente [[Wymbritserediel (gemiente)|Wymbritserediel]]
 *[[Sloten (Frieslaand)|Sloten]] (''Sleat'') - gemiente [[Gaasterlaand-Sloten]]
 *[[Stavoren|Staveuren]] (''Starum'') - gemiente [[Ni'jeferd]]
 *[[Hindeloopen]] (''Hylpen'') - gemiente Ni'jeferd
