--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -148,6 +148,19 @@ Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wå
 
 === Öäly ===
 In 2001 wörden São Tomé un [[Nigeria]] et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når [[ChevronTexaco]], [[ExxonMobil]], un et noorske [[Equity Energy]]. São Tomé kreag 40% van et bud van $123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
+
+=== Banken ===
+De centrale banke van São Tomé un Princípe geyt oaver geldsaken en oaversicht van et bankweasen in et land. Et land hevt ses banken, wårvan de Internationale Banke van São Tomé un Princípe de gröätste en öldste is. Den is verbünden an de Caixa Geral de Depósitos van Portugal. Töt 2003 had et alleynrecht up kommercieel bankyren. In dat jår küm der nen nyen bankwet wårmed de markt vryküm vöär meyrere banken.
+
+=== Sakenpartners ===
+
+==== Uutvoor ====
+In 2018 voorden São Tomé un Príncipe uut vöär sou'n 24 miljoon euro. Dat was ne toname van 118% in 5 jår, want in 2013 voorden et land noch mär vöär 11 miljoon euro uut. Halv São Tomé un Príncipe's uutvoor besteyt uut kakaobounen. Eynvyvde van den uutvoor sint elektriske machines. Andere vöärname uutvoorprodukte sint vleegtüügunderdeylen, auto's, yser, plastik en landbouwprodukte (pepper, öälyen, nöäten en vleisk).
+
+De höyvdbestemmingen vöär uutvoor van São Tomé un Príncipe ligget in Europa, med Neaderland (19%), [[Portugal]] (14%), Polen (13%), Frankryk (7%) en Düütskland (6%) as vöärnaamste untvangers. Andere vöärname koupers sint Singapore, Japan, Brasilie en de Vereynigde Ståten.
+
+De lätste 10 jår is der meyr un meyr når Portugal, Polen un Neaderland uutevoord. Den uutvoor når Angola, Mexiko en India wör stark minder.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
