--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -155,11 +155,42 @@ De centrale banke van São Tomé un Princípe geyt oaver geldsaken en oaversicht
 === Sakenpartners ===
 
 ==== Uutvoor ====
-In 2018 voorden São Tomé un Príncipe uut vöär sou'n 24 miljoon euro. Dat was ne toname van 118% in 5 jår, want in 2013 voorden et land noch mär vöär 11 miljoon euro uut. Halv São Tomé un Príncipe's uutvoor besteyt uut kakaobounen. Eynvyvde van den uutvoor sint elektriske machines. Andere vöärname uutvoorprodukte sint vleegtüügunderdeylen, auto's, yser, plastik en landbouwprodukte (pepper, öälyen, nöäten en vleisk).
+In 2018 voorden São Tomé un Príncipe uut vöär sou'n 24 miljoon euro. Dat was ne toname van 118% in 5 jår, want in 2013 voorden et land noch mär vöär 11 miljoon euro uut. Halv São Tomé un Príncipe's uutvoor besteyt uut [[Kakouboon|kakaobounen]]. Eynvyvde van den uutvoor sint elektriske machines. Andere vöärname uutvoorprodukte sint [[Vliegtuug|vleegtüügunderdeylen]], [[Auto|auto's]], [[Iezer|yser]], [[plastik]] en landbouwprodukte (pepper, öälyen, nöäten en vleisk).
 
-De höyvdbestemmingen vöär uutvoor van São Tomé un Príncipe ligget in Europa, med Neaderland (19%), [[Portugal]] (14%), Polen (13%), Frankryk (7%) en Düütskland (6%) as vöärnaamste untvangers. Andere vöärname koupers sint Singapore, Japan, Brasilie en de Vereynigde Ståten.
+De höyvdbestemmingen vöär uutvoor van São Tomé un Príncipe ligget in Europa, med [[Neaderland]] (19%), [[Portugal]] (14%), [[Polen]] (13%), [[Frankryk]] (7%) en [[Düütskland]] (6%) as vöärnaamste untvangers. Andere vöärname koupers sint [[Singapore]], [[Japan]], [[Brazilië|Brasilie]] en de [[Verienigde Staoten van Amerika|Vereynigde Ståten]].
 
-De lätste 10 jår is der meyr un meyr når Portugal, Polen un Neaderland uutevoord. Den uutvoor når Angola, Mexiko en India wör stark minder.
+De lätste 10 jår is der meyr un meyr når Portugal, Polen un Neaderland uutevoord. Den uutvoor når [[Angola]], [[Mexico (laand)|Mexiko]] en [[India]] wör stark minder.
+
+==== Invoor ====
+In 2018 voorden São Tomé en Príncipe vöär sou'n 161 miljoon dollar in. Seyd 2013 is den invoor händig edaald, vanaf 167 miljoon. Nen vyvden van den invoor is bewarkeden öäly (vöärnamelik uut Angola). Andere invoorgoderen sint auto's, rys, grånprodukten, wyn, elektriske apparaten, chemikalien, kleyder, vleysk, mediske apparaten en holt.
+
+Med 51% kummet meyr as de hälvde van den invoorgoderen uut Portugal. Nen vyvden kümt uut Angola. 6% kümt uut [[Mongolie]], 4% uut de Vereynigde Ståten, 4% uut Brasilie, 2% uut Gabon en 2% uut Frankryk.
+
+De lätste 10 jår is der meyr invoord vanuut Portugal, Angola en China. Der wör flink minder invoord vanuut Thailand, Italie en Nigeria.
+
+===== Portugal =====
+São Tomé un Príncipe haalt machines (med name elektriske generatoren en komputers), voodsel, wyn, grån, rys, melk en sojaöäly uut Portugal. Dårnöäst ouk flinkk wat auto's, seype en yser. Portugal koupt old yser, kopper, kakao en kleyder.
+
+== Samenleaving ==
+De totale samenleaving van São Tomé un Príncipe was in mei 2018 201.800 lüde. Ungeväär 193.380 dårvan woanet up São Tomé en 8420 up Príncipe. Der kummet alle jåren sou'n 4000 lüde by.
+
+Souwat alle inwoaners stammet af van lüde uut andere landen dee as vanaf [[1470]] döär de portugeysken når de eilanden ebracht sint. In de söäventiger jåren van den 20. eywe warren der twey vöärname uuttochten. Souwat 4000 portugeyske ståtsbörgers tröäken vord, un up São Tomé strandden en paar hunderd vlüchtelingen vanuut Angola.
+
+=== Volker ===
+Up São Tomé un Príncipe woanet meyrere volker samen:
+
+* ''Mestiços'', of mengelingen, sint afstammelingen van portugeyske kolonisten en afrikaanske slaven. See wörden in de eyrste jåren van bewoaning oaverebracht vanuut Benin, Gabon, de Kongoleeske Republik en Angola. (See wordet vake anedüded as ''filhos da terra'' of "kinder van et land").
+* ''Angolares'' sint volgens en verhaal de nåkummelingen van angoleyske slaven dee in 1540 ne skipbröäke oaverleyvden en nu leavet van de viskerye.
+* ''Forros'' sint afstammelingen van bevryde slaven, do as slavendryven verböäden wör.
+* ''Serviçais'' sint betaalde krachten uut Angola, Mosambyk en Kaapverdie, dee as tydelik up et eiland woanet.
+* ''Tongas'' sint de kinder van de ''serviçais'' dee as up de eilanden geboaren sint.
+* Europeanen, in höyvdsaak portugeysken
+* Asiaten, med name chineesk, med dårby ouk makanesen med portugeeske en chineeske vöärolden uut Makau
+
+=== Språken ===
+Med en andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feitelike en officiele nationaalspråke van São Tomé un Príncipe. Et is de moderspråke vöär de oavergroute meyrderheid en et wördt der al seyd et ende van de 15. eywe spröäken. Anepasde spreakewysen van et portugeesk of kreoolspråken gevt et ouk: [[forro]] (36,2% spreakt et), kaapverdisk kreool (8,5%), angolar (6,6%) en principensk (1%).
+
+Fransk (6,8%) en engelsk (4,9%) sint väkke up skole.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
