--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -192,6 +192,8 @@ Med en andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feiteli
 
 Fransk (6,8%) en engelsk (4,9%) sint väkke up skole.
 
+=== Gelöyven ===
+De meyrderheid van de inwoaners (71,9%) is by de lokale [[Rooms-Katholieke Karke|roumsk-katolike karke]], wat nauwe banden med Portugal underhöldt. Der sint wat [[Protestantisme|protestanten]], söävendedagsadventisten en evangelisten, by mekander 10,2%. Ouk de [[Islam|moslimgemeynskap]] groit, med nu 17,9%.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
