--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -147,10 +147,10 @@ In döärsneyde düt São Tomé en Príncipe et up de [[Untwikkelingsindeks]] be
 Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden un dee butenlandske investeringen antrekkelik maket. Tüsken 2015 un 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor un untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
 
 === Öäly ===
-In 2001 wörden São Tomé un [[Nigeria]] et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når [[ChevronTexaco]], [[ExxonMobil]], un et noorske [[Equity Energy]]. São Tomé kreag 40% van et bud van $123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
+In 2001 wörden São Tomé un [[Nigeria]] et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når [[ChevronTexaco]], [[ExxonMobil]], un et noorske [[Equity Energy]]. São Tomé kreag 40% van et bud van $&nbsp;123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $&nbsp;2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
 
 === Banken ===
-De centrale banke van São Tomé un Princípe geyt oaver geldsaken en oaversicht van et bankweasen in et land. Et land hevt ses banken, wårvan de Internationale Banke van São Tomé un Princípe de gröätste en öldste is. Den is verbünden an de Caixa Geral de Depósitos van Portugal. Töt 2003 had et alleynrecht up kommercieel bankyren. In dat jår küm der nen nyen bankwet wårmed de markt vryküm vöär meyrere banken.
+De [[centrale banke van São Tomé]] un Princípe geyt oaver geldsaken en oaversicht van et bankweasen in et land. Et land hevt ses banken, wårvan de [[Internationale Banke van São Tomé un Princípe]] de gröätste en öldste is. Den is verbünden an de [[Caixa Geral de Depósitos]] van Portugal. Töt 2003 had et alleynrecht up kommercieel bankyren. In dat jår küm der nen nyen bankwet wårmed de markt vryküm vöär meyrere banken.
 
 === Sakenpartners ===
 
@@ -164,7 +164,7 @@ De lätste 10 jår is der meyr un meyr når Portugal, Polen un Neaderland uutevo
 ==== Invoor ====
 In 2018 voorden São Tomé en Príncipe vöär sou'n 161 miljoon dollar in. Seyd 2013 is den invoor händig edaald, vanaf 167 miljoon. Nen vyvden van den invoor is bewarkeden öäly (vöärnamelik uut Angola). Andere invoorgoderen sint auto's, rys, grånprodukten, wyn, elektriske apparaten, chemikalien, kleyder, vleysk, mediske apparaten en holt.
 
-Med 51% kummet meyr as de hälvde van den invoorgoderen uut Portugal. Nen vyvden kümt uut Angola. 6% kümt uut [[Mongolie]], 4% uut de Vereynigde Ståten, 4% uut Brasilie, 2% uut Gabon en 2% uut Frankryk.
+Med 51% kummet meyr as de hälvde van den invoorgoderen uut Portugal. Nen vyvden kümt uut Angola. 6% kümt uut [[Mongolië|Mongolie]], 4% uut de Vereynigde Ståten, 4% uut Brasilie, 2% uut Gabon en 2% uut Frankryk.
 
 De lätste 10 jår is der meyr invoord vanuut Portugal, Angola en China. Der wör flink minder invoord vanuut Thailand, Italie en Nigeria.
 
@@ -190,7 +190,7 @@ Up São Tomé un Príncipe woanet meyrere volker samen:
 === Språken ===
 Med en andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feitelike en officiele nationaalspråke van São Tomé un Príncipe. Et is de moderspråke vöär de oavergroute meyrderheid en et wördt der al seyd et ende van de 15. eywe spröäken. Anepasde spreakewysen van et portugeesk of kreoolspråken gevt et ouk: [[forro]] (36,2% spreakt et), kaapverdisk kreool (8,5%), angolar (6,6%) en principensk (1%).
 
-Fransk (6,8%) en engelsk (4,9%) sint väkke up skole.
+[[Fransk]] (6,8%) en [[Engels|engelsk]] (4,9%) sint väkke up skole.
 
 === Gelöyven ===
 De meyrderheid van de inwoaners (71,9%) is by de lokale [[Rooms-Katholieke Karke|roumsk-katolike karke]], wat nauwe banden med Portugal underhöldt. Der sint wat [[Protestantisme|protestanten]], söävendedagsadventisten en evangelisten, by mekander 10,2%. Ouk de [[Islam|moslimgemeynskap]] groit, med nu 17,9%.
