[[commons:File:Transnistria.jpg|Transnistria.jpg]] is vervungen deur [[commons:File:Passport_of_Transnistria.jpg|Passport_of_Transnistria.jpg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[

--- a/Transnistrie.mw
+++ b/Transnistrie.mw
@@ -22,7 +22,7 @@
 | landkode = –
 | tel = 373
 }}
-[[Bestaand:Transnistria.jpg|duum|Transnistrisk [[paspoort]]]]
+[[Bestaand:Passport of Transnistria.jpg|duum|Transnistrisk [[paspoort]]]]
 '''Transnistrie''' is een regio dee volgens de [[VN]] tot [[Moldavië (laand)|Moldavie]] behöyrt, et funktioneert lykewels as een selvstandige ståt. Transnistrie besteyt üüt een lange streapel land an de oustkante van de rivyr de Dnestr.  
 
 == Name ==
