[[:Kategorie:Nederlaands keuninkshuus]] weg-ehaald; [[:Kategorie:Keunink van Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Beatrix_van_Nederlaand.mw
+++ b/Beatrix_van_Nederlaand.mw
@@ -28,4 +28,4 @@ Op [[10 meert]] [[1966]] vun t burgerlike huwelik in t stadhuus van [[Amsterdam]
 
 {{Dialekt|wvel|Nunspeet|Algemene Nedersaksiese Schriefwieze}}
 
-[[Kategorie:Nederlaands keuninkshuus|Beatrix]]
+[[Kategorie:Keunink van Nederlaand|Beatrix]]
