[[:Kategorie:Nederlaands keuninkshuus]] weg-ehaald; [[:Kategorie:Keunink van Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Juliana_van_Nederlaand.mw
+++ b/Juliana_van_Nederlaand.mw
@@ -26,4 +26,4 @@ Juliana en Bernhard kregen in de loop der jaoren vier kienders:
 
 {{Dialekt|wvel|Nunspeet|Algemene Nedersaksiese Schriefwieze}}
 
-[[Kategorie:Nederlaands keuninkshuus|Juliana]]
+[[Kategorie:Keunink van Nederlaand|Juliana]]
