[[:Kategorie:Nederlaands keuninkshuus]] weg-ehaald; [[:Kategorie:Keunink van Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Willem-Alexander_van_de_Nedderlanden.mw
+++ b/Willem-Alexander_van_de_Nedderlanden.mw
@@ -16,4 +16,4 @@
 Hee is het oldste keend uut het huwelijk van [[Beatrix van Nederlaand|Beatrix]], Prinses van Nederland, en [[Claus van Amsberg|Claus]], Prins van Nederland, Jonkheer van Amsberg. Zienen roopname is Alex/Alexander.
 
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Nederlaands keuninkshuus]]
+[[Kategorie:Keunink van Nederlaand]]
