--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -26,7 +26,7 @@
 | umskrieving2=
 }}
 
-'''São Tomé en Príncipe''' (up syn [[portugeysk]]: [sɐ̃w̃ tuˈmɛ i ˈpɾĩsɨpɨ]; [[neadersassisk]]: "Sünt Tomas en Prince"), officieel de '''Demokratiske Republik São Tomé en Principe''' (portugeysk: '''República Democrática de São Tomé e Príncipe'''), is nen eilandståt in de Gulv van Guinea, uut de küste van centraal [[Afrika]]. Et besteyt uut twey eilandgrupen rund de beide höyvdeilanden [[Sáo Tomé]] en [[Príncipe]]. Dee ligget ungeväär 150 kilometer uut mekander en ungeväär 250 en 225 kilometer uut de noordwestelike küste van [[Gabon]]. Med 201.800 inwoaners (skatting 2018) is et de eynnåkleinste en eynnålöädigsten ståt van Afrika, nå de [[Seychellen]].
+'''São Tomé un Príncipe''' (up syn [[portugeysk]]: [sɐ̃w̃ tuˈmɛ i ˈpɾĩsɨpɨ]; [[neadersassisk]]: "Sünt Tomas en Prince"), officieel de '''Demokratiske Republik São Tomé un Principe''' (portugeysk: '''República Democrática de São Tomé e Príncipe'''), is nen eilandståt in de Gulv van Guinea, uut de küste van centraal [[Afrika]]. Et besteyt uut twey eilandgrupen rund de beide höyvdeilanden [[Sáo Tomé]] un [[Príncipe]]. Dee ligget ungeväär 150 kilometer uut mekander en ungeväär 250 en 225 kilometer uut de noordwestelike küste van [[Gabon]]. Med 201.800 inwoaners (skatting 2018) is et de eynnåkleinste en eynnålöädigsten ståt van Afrika, nå de [[Seychellen]].
 
 Vöär at [[Portugal|portugeyske]] verkenners et untdekkeden in den 14. eywe, woanden der gin lüde. Stükken by beaten wörden se koloniseerd en bewoand durende de 16. eywe. Händigan wörden de eilanden ne vöärname handelspost vöär de atlantiske [[slavenhandel]]. Ümdat São Tomé en Príncipe kort by den eavenaar ligget en ryken vulkanisken grund hebbet, wolde sukerreed der best groien. Neet vöäle later kümmen dår ouk noch andere waerdevulle gewassen by as [[Koffie|koffee]] en [[Kakouboom|kakao]]. Der wörden dikke verdeend an de [[Plantage|plantages]], dee bewarked wörden döär afrikaanske slaven. Gedurende de 19. en 20. eywen kümmen de lüde üm de souvöäle tyd up de achterste beyne teagen de underdrukking, wårdöär de handel eraked wör. Et leidden in 1975 töt vreydsame unafhangelikheid. Seyd dee tyd is São Tomé en Princípe eyne van Afrika's eavenwichtigste en meyst demokratiske landen.
 
