--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -196,13 +196,27 @@ Med un andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feiteli
 De meyrderheid van de inwoaners (71,9%) is by de lokale [[Rooms-Katholieke Karke|roumsk-katolike karke]], wat nauwe banden med Portugal underhöldt. Der sint wat [[Protestantisme|protestanten]], söävendedagsadventisten un evangelisten, by mekander 10,2%. Ouk de [[Islam|moslimgemeynskap]] groit, med nu 17,9%.
 
 === Underwys ===
-Van alle afrikaanske landen under den sahara hevt São Tomé un Príncipe eyne van höygste cyfers in leasvaerdigheid. Volgens et Wearldfeitenbook van de CIA uut 2018 kunde 92,8% van de inwoaners van 15 of ölder leasen un skryven. Volgens et Meatinitiatyv vöär Menskenrechten (MIMR) voldüt São Tomé un Príncipe vöär 83,8% an et recht up underwys, up grund van wat der an geld in et land binnenkümt. MIMR kikt dårby når et recht up beide basisunderwys un vöörtesat underwys. Up grund van et döärsneyde inkummen van São Tomé un Príncipe haalt et land 90,4% wat der möägelik is up basisskoolniveau, mär 77,2% vöär middelbår underwys.
+Van alle afrikaanske landen under den sahara hevt São Tomé un Príncipe eyne van höygste cyfers in leasvaerdigheid. Volgens et Wearldfeitenbook van de CIA uut 2018 kunde 92,8% van de inwoaners van 15 jår of ölder leasen un skryven. Volgens et Meatinitiatyv vöär Menskenrechten (MIMR) voldüt São Tomé un Príncipe vöär 83,8% an et recht up underwys, up grund van wat der an geld in et land binnenkümt. MIMR kikt dårby når et recht up beide basisunderwys un vöörtesat underwys. Up grund van et döärsneyde inkummen van São Tomé un Príncipe haalt et land 90,4% wat der möägelik is up basisskoolniveau, mär 77,2% vöär middelbår underwys.
 
 Kinder müt verplicht ses jår når skole. Wovöäle kinder of der når skole güngen wör vöär 2001 neet byehölden.
 
 Et underwysstelsel hevt to weinig klaslokalen, neet good upeleide un slechtbetaalde undewysers, untoreikende leyrböker un materialen, vöäle herhaling van etselvde, weinig underwysplanning un beheyr un ouk weinig interesse vanuut de gemeynskap vöär underwysverbeatering. Der wördt weinig geld in et skoolstelsel estöäken, wårmed et slim afhangelik is van butenlandske geldsketers.
 
 Wydergånde instituten sint et Nationaal Lyceum un de Universiteit van São Tomé un Príncipe.
+
+== Kultuur ==
+Saotomeeske kultuur is nen mengförm van afrikaanske en portugeeske invloden.
+
+=== Musik ===
+Saotomeeske musik ümvat de [[ússua]] un [[socopé]]-ritmes. Up Príncipe hebbet se [[dêxa]]-beat. Et sint gelyk ouk de namen van de byhöyrende dansen. Kenners höyret der portugeesken [[ballroom]] by döär.
+
+''[[Tchiloli]]'' un [[Danço-congo]] sint musikale dansupvoringen rundüm en dramatisk verhaal. Ouk populäär is de kaapverdiaanske [[morna]], populariseerd döär [[Cesária Évora]], bekend as de mornaköäniginne.
+
+=== Skryverye ===
+De skryverye van de eilanden wördt döär vöälen aneweysen as eyne van de rykste van portugeysk Afrika. Ouk wördt der verholdingswys vöäle skreaven in forro, engelsk un [[kaué]]-kreoolsk. [[Francisco José Tenreiro]] wördt eseen as eyne van de invloodrykste skryvers van et land. Andere bekende skryvers sint [[Manuela Margarido]], [[Alda Espirito Santo]], [[Olinda Beja]] un [[Conceição Lima]].
+
+=== Sport ===
+[[Vootbal]] is den vöärnaamsten sport in São Tomé un Principe, et nationale elvtal valt under de Sãotomeeske Vootbalfederaty. Et is aneslöäten by de Afrikaanske Vootbalfederaty (AV) un FIFA.
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie: Laand]]
