--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -188,7 +188,7 @@ Up São Tomé un Príncipe woanet meyrere volker samen:
 * Asiaten, med name chineesk, med dårby ouk makanesen med portugeeske un chineeske vöärolden uut Makau
 
 === Språken ===
-Med un andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feitelike un officiele nationaalspråke van São Tomé un Príncipe. Et is de moderspråke vöär de oavergroute meyrderheid un et wördt der al seyd et ende van de 15. eywe spröäken. Anepasde spreakewysen van et portugeesk of kreoolspråken gevt et ouk: [[forro]] (36,2% spreakt et), kaapverdisk kreool (8,5%), angolar (6,6%) un principensk (1%).
+Med en andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feitelike un officiele nationaalspråke van São Tomé un Príncipe. Et is de moderspråke vöär de oavergroute meyrderheid un et wördt der al seyd et ende van de 15. eywe spröäken. Anepasde spreakewysen van et portugeesk of kreoolspråken gevt et ouk: [[forro]] (36,2% spreakt et), kaapverdisk kreool (8,5%), angolar (6,6%) un principensk (1%). Ouk [[kaué]]-kreoolsk kümt vöär.
 
 [[Fransk]] (6,8%) un [[Engels|engelsk]] (4,9%) sint väkke up skole.
 
@@ -196,13 +196,13 @@ Med un andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feiteli
 De meyrderheid van de inwoaners (71,9%) is by de lokale [[Rooms-Katholieke Karke|roumsk-katolike karke]], wat nauwe banden med Portugal underhöldt. Der sint wat [[Protestantisme|protestanten]], söävendedagsadventisten un evangelisten, by mekander 10,2%. Ouk de [[Islam|moslimgemeynskap]] groit, med nu 17,9%.
 
 === Underwys ===
-Van alle afrikaanske landen under den sahara hevt São Tomé un Príncipe eyne van höygste cyfers in leasvaerdigheid. Volgens et Wearldfeitenbook van de CIA uut 2018 kunde 92,8% van de inwoaners van 15 jår of ölder leasen un skryven. Volgens et Meatinitiatyv vöär Menskenrechten (MIMR) voldüt São Tomé un Príncipe vöär 83,8% an et recht up underwys, up grund van wat der an geld in et land binnenkümt. MIMR kikt dårby når et recht up beide basisunderwys un vöörtesat underwys. Up grund van et döärsneyde inkummen van São Tomé un Príncipe haalt et land 90,4% wat der möägelik is up basisskoolniveau, mär 77,2% vöär middelbår underwys.
+Van alle afrikaanske landen under den sahara hevt São Tomé un Príncipe eyne van höygste cyfers in leasvaerdigheid. Volgens et Wearldfeitenbook van de CIA uut [[2018]] kunde 92,8% van de inwoaners van 15 jår of ölder leasen un skryven. Volgens et [[Meatinitiatyv vöär Menskenrechten]] (MIMR) vuldüt São Tomé un Príncipe vöär 83,8% an et recht up underwys, up grund van wat der an geld in et land binnenkümt. MIMR kikt dårby når et recht up beide basisunderwys un vöörtesat underwys. Up grund van et döärsneyde inkummen van São Tomé un Príncipe haalt et land 90,4% wat der möägelik is up basisskoolniveau, mär 77,2% vöär middelbår underwys.
 
 Kinder müt verplicht ses jår når skole. Wovöäle kinder of der når skole güngen wör vöär 2001 neet byehölden.
 
-Et underwysstelsel hevt to weinig klaslokalen, neet good upeleide un slechtbetaalde undewysers, untoreikende leyrböker un materialen, vöäle herhaling van etselvde, weinig underwysplanning un beheyr un ouk weinig interesse vanuut de gemeynskap vöär underwysverbeatering. Der wördt weinig geld in et skoolstelsel estöäken, wårmed et slim afhangelik is van butenlandske geldsketers.
+Et underwysstelsel hevt to weinig klaslokalen, neet good upeleide un slechtbetaalde undewysers, untoreikende leyrböker un materialen, vöäle herhaling van etselvde, weinig underwysplanning un beheyr, un ouk weinig interesse vanuut de gemeynskap vöär underwysverbeatering. Der wördt weinig geld in et skoolstelsel estöäken, wårmed et slim afhangelik is van butenlandske geldsketers.
 
-Wydergånde instituten sint et Nationaal Lyceum un de Universiteit van São Tomé un Príncipe.
+Wydergånde instituten sint et Nationaal Lyceum un de [[Universiteit van São Tomé un Príncipe]].
 
 == Kultuur ==
 Saotomeeske kultuur is nen mengförm van afrikaanske en portugeeske invloden.
