--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -172,6 +172,8 @@ De lätste 10 jår is der meyr invoord vanuut Portugal, Angola un China. Der wö
 São Tomé un Príncipe haalt machines (med name elektriske generatoren un komputers), voodsel, wyn, grån, rys, melk un sojaöäly uut Portugal. Dårnöäst ouk flinkk wat auto's, seype un yser. Portugal koupt old yser, kopper, kakao un kleyder.
 
 == Samenleaving ==
+[[Bestaand:S%C3%A3o_Tom%C3%A9_and_Pr%C3%ADncipe.png|thumb|right|200px|Bevolkingsgroi van São Tomé un Príncipe]]
+
 De totale samenleaving van São Tomé un Príncipe was in mei 2018 201.800 lüde. Ungeväär 193.380 dårvan woanet up São Tomé un 8420 up Príncipe. Der kummet alle jåren sou'n 4000 lüde by.
 
 Souwat alle inwoaners stammet af van lüde uut andere landen dee as vanaf [[1470]] döär de portugeysken når de eilanden ebracht sint. In de söäventiger jåren van den 20. eywe warren der twey vöärname uuttochten. Souwat 4000 portugeyske ståtsbörgers tröäken vord, un up São Tomé strandden un paar hunderd vlüchtelingen vanuut Angola.
