--- a/São_Tomé_un_Príncipe.mw
+++ b/São_Tomé_un_Príncipe.mw
@@ -95,8 +95,8 @@ Up 12 february 2009 wör der nen tweyden ståtsgreyp probeerd. De skuldigen wör
 In 2020 kreag et land ouk med [[COVID-19]] to maken. In totaal kümmen der sou’n 76 lüde an uut de tyd.
 
 == Landsbeskryving ==
-[[Bestaand:Carta s tome 40k.jpg|duum|Topografiske kaarte van São Tomé]]
-[[Bestaand:Carta principe 40k.jpg|duum|Topografiske kaarte van Príncipe]]
+[[Bestaand:Carta s tome 40k.jpg|duum|Topografiske kaarte van São Tomé|238x238px]]
+[[Bestaand:Carta principe 40k.jpg|duum|Topografiske kaarte van Príncipe|230x230px]]
 De beide eilanden dee São Tomé un Príncipe öären name geavet, wördden 30 miljoon jår weaderümme förmed in et [[oligoceen]], döär vulkaniske krachten under de kameroonlyne. De vulkaniske grunden, ryk an basalt un fonoliten van sou'n 3 miljoon jår old, helpet de plantages al seed den kolonialen tyd.
 
 São Tomé un Príncipe is et eynnåkleinste land van Afrika. Et ligt in den [[Gulv van Guinea]], tüsken 300 un 250&nbsp;km uut de noordwestelike küste van [[Gabon]]. Beide eilände höyret by de volkaniske bargkeatene van [[Kameroen|Kameroon]]. Dår höyret ouk de eilände [[Annobón]] up et süüdwesten, [[Bioko]] up et noordousten (beide van [[Ekwatoriaal Guinea]]) un [[Kameroonbarg]] up de küste van den Gulv van Guinea. São Tomé is 50&nbsp;km lank un 30&nbsp;km breyd un den meyr bargachtigen van de beide. Med 2024 meter is den Pico de São Tomé den höygsten top. Príncipe is ungeväär 30&nbsp;km lank un 6&nbsp;km breyd. Et höygste punt, Pico de Príncipe, is 948 meter. De bargen sint bedekked med dik, vul wold, wåras rappe beaken döärhen ströymet. Meyr up den sey an groiet de gewassen. Strak up et süden van São Tomé löpt den eavenaar, dwars oaver et eiländke [[Ilhéu das Rolas]]. 
@@ -113,11 +113,13 @@ Et land valt vöär un deyl under de ekoregio [[Nat laeglandwold van São Tomé,
 
 == Ekonomy ==
 === Landbouw ===
-Seyd de 19. eywe drait de ekonomy van São Tomé un Príncipe op plantagelandbouw. Rund de unafhangelikheid was et bewarkbåre land vöär 90% in handen van portugeyske plantageholders. Nå de unafhangelikheid güng et beheyr van disse plantages oaver up ståtslandbouwbedryve. Med 95% van de heyle landbouwgrunden is kakao et höyvdgewas up São Tomé. Andere uutvoorgewassen sint under meyr [[kopra]], [[palm]]kernen un koffee.
+[[Bestaand:Fèves de cacao grillées de São Tomé-et-Príncipe (2).jpg|duum|318x318px|Brandede kakaobounen, eyn van de vöärnaamste uutvoorprodukte van São Tomé un Príncipe]]
+[[Bestaand:Randonnée à São Tomé.jpg|duum|320x320px|Natuurturisme in São Tomé un Príncipe]]
+Seyd de 19. eywe drait de [[Ekonomie|ekonomy]] van São Tomé un Príncipe op plantagelandbouw. Rund de unafhangelikheid was et bewarkbåre land vöär 90% in handen van portugeyske plantageholders. Nå de unafhangelikheid güng et beheyr van disse plantages oaver up ståtslandbouwbedryve. Med 95% van de heyle landbouwgrunden is [[kakao]] et höyvdgewas up São Tomé. Andere uutvoorgewassen sint under meyr [[kopra]], [[palm]]kernen un [[Koffie|koffee]].
 
 Binnenlandske voodselvöärseningen sint neet genog vöär de bevolking, soudat et land et meyste van et eaten müt invoren. In 1997 wör eskatted dat sou'n 90% van alle eaten in et land invoord wör. De regeyring hevt med verskillende programma's probeerd voodselprodukty in de höygde to krygen. Geld hyrvöär kümt vöärnamelik uut et butenland.
 
-Nöäst landbouw müt et land et vöäral hebben van viskerye un kleinskålige industry. Dat lätste richt sik vöäral up et verwarken van lokale landbouwprodukte un et maken van en paar eynvoldige konsumptygoderen. De eilanden sint mooi genog vöär turisme un de regeyring is gangs üm der måtregelen vöär to treffen üm et in de beyne to helpen. Souwat 11% van de lüde warket vöär de regeyring.
+Nöäst landbouw müt et land et vöäral hebben van [[Visserieje|viskerye]] un kleinskålige industry. Dat lätste richt sik vöäral up et verwarken van lokale landbouwprodukte un et maken van en paar eynvoldige gebruuksgoderen. De eilanden sint mooi genog vöär [[Toerisme|turisme]] un de regeyring is gangs üm der måtregelen vöär to treffen üm et in de beyne to helpen. Souwat 11% van de lüde warket vöär de regeyring.
 
 Nå unafhangelikheid had et land ne centraal eleide ekonomy. Et grötste deyl van produkty was in handen van den ståt. Den oorsprungeliken grundwet skreav ne mengde ekonomy vöär, med private handelsunderneamingen dee warkden vanuut ståtsvastgood un fabriken.
 
@@ -142,9 +144,9 @@ De grötste uutdagingen vöär de ekonomy sint ne kleine warkmacht, et feit dat 
 De regeyring wil et up den langen duur uplössen döär verskillende sektoren to stimuleren, de ekonomy to vorbreyden, regeyringsuutgaven in to dammen, volk an et underneamen to krygen un butenlandske investeringen an to trekken.
 
 === Dinge dee al good gåt ===
-In döärsneyde düt São Tomé un Príncipe et up de [[Untwikkelingsindeks]] better as andere afrikaanske landen under den Sahara. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde [[leavensverwachting]] is inmiddels 70 jår. [[Kinderstarvde]] kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
+In döärsneyde düt São Tomé un Príncipe et up de [[Untwikkelingsindeks]] better as andere afrikaanske landen under den [[Sahara]]. Et land hevt flink vöäruut ebuurd up de meyste sociale vlakken. Alle kinder van de eilanden gåt når skole un den döärsneyde [[leavensverwachting]] is inmiddels 70 jår. [[Kinderstarvde]] kümt håste neet meyr vöär un de meyste lüde hebbet ströymend water un elektriciteit.
 
-Wat underneamerskap angeyt hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden un dee butenlandske investeringen antrekkelik maket. Tüsken 2015 un 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor un untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
+Üm underneamerskap an to jagen hevt de regeyring verskillende wetten anenöämen wårmed private underneamingen estart künden worden un dee butenlandske investeringen antrekkelik maket. Tüsken 2015 un 2019 sint der heyl wat nye bedryve sticht. Dårmed daalden de warklousheid, steyg den uutvoor un untstunden verskillende fabriken. Oaver de kummende jåren wördt nen flinken ekonomisken groi verwachted.
 
 === Öäly ===
 In 2001 wörden São Tomé un [[Nigeria]] et eyns oaver samen kyken of der öäly in de deylde seyboadem sit. Nå lange oaverleggen güng et samenwarkingsgebeed in april 2003 lös vöär bedingen van internationale öälyfirma's. Et gebeed wör in neagen blükke indeyld; bluk eyne güng når [[ChevronTexaco]], [[ExxonMobil]], un et noorske [[Equity Energy]]. São Tomé kreag 40% van et bud van $&nbsp;123 miljoon un Nigeria de andere 60%. Oktober 2004 stünden andere blükke noch lös. São Tomé hevt meyr as $&nbsp;2 miljoon van de banke kreagen üm de petröälysektor in de beyne to helpen.
@@ -190,6 +192,26 @@ Up São Tomé un Príncipe woanet meyrere volker samen:
 * Asiaten, med name chineesk, med dårby ouk makanesen med portugeeske un chineeske vöärolden uut Makau
 
 === Språken ===
+{| class="wikitable mw-collapsible"
+|+
+!Språke
+!% Spreakers
+|-
+|Portugeysk
+|98,4%
+|-
+|Forro
+|36,2%
+|-
+|Kaapverdisk kreool
+|8,5%
+|-
+|Angolar
+|6,6%
+|-
+|Principensk
+|1%
+|}
 Med en andeyl van 98,4% van de inwoaners as spreaker is Portugeesk is de feitelike un officiele nationaalspråke van São Tomé un Príncipe. Et is de moderspråke vöär de oavergroute meyrderheid un et wördt der al seyd et ende van de 15. eywe spröäken. Anepasde spreakewysen van et portugeesk of kreoolspråken gevt et ouk: [[forro]] (36,2% spreakt et), kaapverdisk kreool (8,5%), angolar (6,6%) un principensk (1%). Ouk [[kaué]]-kreoolsk kümt vöär.
 
 [[Fransk]] (6,8%) un [[Engels|engelsk]] (4,9%) sint väkke up skole.
